[tool.poetry]
name = "ruuvigate"
version = "1.0.3"
description = "Python package to publish RuuviTag data to cloud"
license = "MIT"
authors = ["Jan Lipponen <jan.lipponen@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jlipponen/RuuviGate"
keywords = ["RuuviTag"]
packages = [
    { include = "ruuvigate" },
]
classifiers = [
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = "^3.8"
ruuvitag-sensor = "^2.0.0"
azure-iot-device = "^2.12.0"
pyyaml = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
