[tool.poetry]
name = "ruuvigate"
version = "1.0.4"
description = "Python package to publish RuuviTag data to cloud"
license = "MIT"
authors = ["Jan Lipponen <jan.lipponen@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jlipponen/RuuviGate"
keywords = ["RuuviTag"]
packages = [
    { include = "ruuvigate" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.8"
ruuvitag-sensor = "^2.0.0"
azure-iot-device = "^2.12.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
yapf = "^0.40.2"
mypy = "^1.8.0"
types-PyYAML = "^6.0.12.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    "tests/**",
]

[tool.mypy]
python_version = 3.8
exclude = "tests"
