[metadata]
name = ruuvigate
version = 0.1.0
author = Jan Lipponen
author_email = jan.lipponen@gmail.com
description = An application to push RuuviTag data to periodically to cloud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlipponen/RuuviGate
project_urls =
    Bug Tracker = https://github.com/jlipponen/RuuviGate/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ruuvigate
packages = find:
python_requires = >=3.8

[options.packages.find]
where = ruuvigate
