[metadata]
name = ruuvigate
author = Jan Lipponen
author_email = jan.lipponen@gmail.com
license = MIT
description = An application to push RuuviTag data to periodically to cloud
long_description_content_type = text/markdown
url = https://github.com/jlipponen/RuuviGate
project_urls =
    Bug Tracker = https://github.com/jlipponen/RuuviGate/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = ruuvigate
packages = find:
python_requires = >=3.8

[options.packages.find]
where = ruuvigate